--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,22 @@ version: '3'
 
 services:
   frontend:
-    build: ./frontend
+    build: ./Frontend
     ports:
       - "3000:3000"
     depends_on:
-      - db
+      - mongo
 
   backend:
-    build: ./backend
+    build: ./Backend
     ports:
       - "5000:5000"
     depends_on:
-      - db
+      - mongo
+    environment:
+      - MONGO_URI=mongodb://mongo:27017/
 
-  db:
+  mongo:
     image: mongo
     restart: always
     environment:
