--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: '3'
 
 services:
   frontend:
-    build: ./Frontend
+    build: ./frontend
     ports:
       - "3000:3000"
     depends_on:
       - mongo
 
   backend:
-    build: ./Backend
+    build: ./backend
     ports:
       - "5000:5000"
     depends_on:
